--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,5 +9,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the site in the jekyll/builder container
       run: |
-        docker run \
-        rohatsh/builder:latest /bin/bash -c "echo hostname"
+        docker build -t rohatsh .
